--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Your Name — Resume</title>
+  <title>Isaac Soler — Resume</title>
   <meta name="description" content="Professional resume and portfolio of Your Name: IT Support, Networking, Cybersecurity." />
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
   <meta name="theme-color" content="#0f172a"/>
@@ -16,15 +16,15 @@
   {
     "@context": "https://schema.org",
     "@type": "Person",
-    "name": "Your Name",
-    "jobTitle": "IT Support / Junior Cybersecurity",
-    "email": "mailto:you@example.com",
-    "telephone": "+1-555-555-5555",
-    "url": "https://yourusername.github.io/",
-    "sameAs": ["https://www.linkedin.com/in/yourusername","https://github.com/yourusername"],
+    "name": "Isaac Soler",
+    "jobTitle": "IT Support / CBRN Specialist",
+    "email": "Isaac.i.Soler@gmail.com",
+    "telephone": "732-865-5015",
+    "url": "https://github.com/IsaacSoler",
+    "sameAs": ["www.linkedin.com/in/isaac-soler-70393b339","https://github.com/yourusername"],
     "address": {
       "@type": "PostalAddress",
-      "addressLocality": "Newark",
+      "addressLocality": "Old Bridge",
       "addressRegion": "NJ",
       "addressCountry": "US"
     }
@@ -35,7 +35,7 @@
   <a class="skip-link" href="#content">Skip to content</a>
   <header class="site-header container">
     <div class="id">
-      <img src="assets/profile.jpg" alt="Headshot of Your Name" class="avatar" />
+      <img src="profile.jpg" alt="Headshot of Your Name" class="avatar" />
       <div>
         <h1>Your Name</h1>
         <p class="subtitle">IT Support • Networking • Cybersecurity</p>
