--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
     <div class="id">
       <img src="profile.jpg" alt="Headshot of Your Name" class="avatar" />
       <div>
-        <h1>Your Name</h1>
-        <p class="subtitle">IT Support • Networking • Cybersecurity</p>
+        <h1>Isaac Soler</h1>
+        <p class="subtitle">IT Support / CBRN Specialist</p>
         <p class="links">
-          <a href="mailto:you@example.com">you@example.com</a> · 
-          <a href="https://www.linkedin.com/in/yourusername" target="_blank" rel="noreferrer noopener">LinkedIn</a> ·
-          <a href="https://github.com/yourusername" target="_blank" rel="noreferrer noopener">GitHub</a>
+          <a href="mailto:Isaac.I.Soler@gmail.com">Isaac.I.Soler@gmail.com</a> · 
+          <a href="www.linkedin.com/in/isaac-soler-70393b339" target="_blank" rel="noreferrer noopener">LinkedIn</a> ·
+          <a href="https://github.com/IsaacSoler" target="_blank" rel="noreferrer noopener">GitHub</a>
         </p>
       </div>
     </div>
@@ -66,14 +66,14 @@
   <main id="content" class="container">
     <section id="summary" class="card">
       <h2>Professional Summary</h2>
-      <p>Detail-oriented IT student with hands-on experience in help desk, networking, and cybersecurity labs. Strong troubleshooting, customer service, and documentation skills. Seeking an entry-level IT role with growth toward SOC/Cybersecurity.</p>
+      <p>Motivated IT student and National Guard service member with hands-on experience in troubleshooting technology, collaborative software development, and mission-critical operations. Demonstrates strong discipline, leadership, and adaptability through military service as a CBRN Specialist, combined with technical expertise gained through academic and project-based work.</p>
     </section>
 
     <section id="skills" class="card">
       <h2>Key Skills</h2>
       <ul class="chips">
-        <li>Windows 10/11</li><li>Linux</li><li>Active Directory</li><li>Networking (TCP/IP, DNS, DHCP)</li>
-        <li>Ticketing (Jira/ServiceNow)</li><li>PowerShell</li><li>Bash</li><li>SIEM Basics</li><li>BitLocker</li>
+        <li>Windows 10/11</li><li>Linux</li><li>GitHub</li>
+        <li>Java</li><li>Python</li><li>HTML/CSS</li>
       </ul>
     </section>
 
@@ -82,13 +82,11 @@
       <div class="timeline">
         <article class="timeline-item">
           <header>
-            <h3>IT Help Desk Intern <span class="muted">— Company Name</span></h3>
-            <span class="meta">Jan 2025 – Present · Newark, NJ</span>
+            <h3>Associate<span class="muted">— Spencer's</span></h3>
+            <span class="meta">Aug 2025 – Present · Clifton, NJ</span>
           </header>
           <ul>
-            <li>Resolved 25+ weekly tickets (password resets, OS issues, VPN) with 95% CSAT.</li>
-            <li>Imaged laptops with Intune/SCCM; enforced BitLocker and baseline hardening.</li>
-            <li>Documented fixes and added 10 new KB articles to reduce repeat incidents.</li>
+            <li>Repaired and maintained in-store technology, including printers, computers, registers, and sound systems, ensuring smooth daily operations.</li>
           </ul>
         </article>
         <article class="timeline-item">
@@ -108,17 +106,11 @@
       <h2>Projects</h2>
       <div class="grid">
         <article class="project">
-          <h3>AI Help Desk Copilot</h3>
-          <p>Built a chatbot that answers Tier‑1 support questions and drafts ticket responses using an open‑source LLM hosted locally.</p>
+          <h3>Banking System Project</h3>
+          <p>Collaborated on a Java-based banking system with features including checking/savings accounts, loans, investments, foreign exchange, insurance, and ATM/online banking modules.</p>
           <ul class="tags"><li>Python</li><li>Ollama</li><li>HTML/CSS</li></ul>
           <a class="btn small" href="#" aria-disabled="true">Demo</a>
-          <a class="btn small outline" href="https://github.com/yourusername/ai-helpdesk" target="_blank" rel="noreferrer noopener">Code</a>
-        </article>
-        <article class="project">
-          <h3>Network Monitor Dashboard</h3>
-          <p>Visualized ping/HTTP checks and summarized logs with a local LLM; alerting via email.</p>
-          <ul class="tags"><li>Node.js</li><li>SQLite</li><li>Charts</li></ul>
-          <a class="btn small outline" href="#" aria-disabled="true">Case Study</a>
+          <a class="btn small outline" href="https://github.com/APBankProject/BankProject" target="_blank" rel="noreferrer noopener">Code</a>
         </article>
       </div>
     </section>
@@ -140,7 +132,7 @@
   </main>
 
   <footer class="site-footer container">
-    <p>© <span id="year"></span> Your Name — <a href="#" onclick="window.print()">Download PDF</a></p>
+    <p>© <span id="year"></span> Isaac Soler — <a href="#" onclick="window.print()">Download PDF</a></p>
   </footer>
 </body>
 </html>
