--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
         <article class="project">
           <h3>Banking System Project</h3>
           <p>Collaborated on a Java-based banking system with features including checking/savings accounts, loans, investments, foreign exchange, insurance, and ATM/online banking modules.</p>
-          <ul class="tags"><li>Python</li><li>Ollama</li><li>HTML/CSS</li></ul>
-          <a class="btn small" href="#" aria-disabled="true">Demo</a>
+          <ul class="tags"><li>Java</li>
           <a class="btn small outline" href="https://github.com/APBankProject/BankProject" target="_blank" rel="noreferrer noopener">Code</a>
         </article>
       </div>
